cafe/ingress-cafe.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cafe-ingress
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /tea
          backend:
            serviceName: tea-svc
            servicePort: 80
        - path: /coffe
          backend:
            serviceName: coffee-svc
            servicePort: 80
